--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ img {
   vertical-align: middle;
 }
 .introduction-banner {
-  background: url("../images/dawn_topbanner.jpg") no-repeat;
+  background: url("../images/BG.jpg") no-repeat;
   background-position: center center;
   height:100%;
   background-size: cover;
