--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,8 @@ h2,
 h5,
 h1 {
   font-weight:300;
-  color: #ffffff;
+  color: orange;
+  	
 }
 h1 {
   font-size: 43px;
@@ -313,6 +314,7 @@ img {
   background-position: center center;
   height:100%;
   background-size: cover;
+  background-attachment: fixed;
 }
 @media screen and (min-width: 768px) and (max-height: 730px){
   .introduction-banner .cta-group{
@@ -413,6 +415,7 @@ img {
 }
 .eos-features-main {
   padding: 20px 0 60px;
+ background:white;	
 }
 .eos-features-main .features-description p:last-child {
   margin-bottom: 20px;
@@ -495,7 +498,7 @@ img {
 }
 .eos-features-main .features-box-main p {
   font-size: 13px;
-  color:#DDDDDE;
+  color:#4f4f4f;
 }
 .eos-features-main .features-box-main .feat-more-info {
   margin-top: 65px;
@@ -3892,7 +3895,7 @@ textarea#abi-inerface:focus{
   line-height: 100px;
   /*border-top: 1px solid rgba(255,255,255,0.14);*/
   position: relative;
-  background-color: #111114;
+  background: white;
 }
 @media screen and (min-width: 768px) and (max-height: 670px){
   .banner-title h2{
