Logo / Colour shift

--- a/css/main.css
+++ b/css/main.css
@@ -457,7 +457,7 @@ img {
     justify-content: center;
     height: 80px;
     border-radius: 50%;
-    background-color: #f6c3ae;
+    background-color: #d69361;
     margin: 0 auto 20px;
     font-size: 39px;
     color: white;
