--- a/css/main.css
+++ b/css/main.css
@@ -510,10 +510,11 @@ img {
   background: none;
     border: 0;
     border-bottom: 1px solid #ffffff;
-    height: 30px;
+    height: 50px;
     width: 100%;
     color: white;
     outline: none;
+	    background: #3f4045;
 	font-family: 'ubuntu';
     font-size: 16px;
     text-align: center;
