--- a/css/main.css
+++ b/css/main.css
@@ -916,6 +916,12 @@ label {
   font-size: 12px;
   color: #ff0000;
 }
+.ContractBalance {
+    text-align: right;
+    width: 100%;
+	margin-right:10px;
+}
+
 .supporters-section {
   padding: 30px 0;
   border-top:1px solid rgba(0,0,0,0.68);
@@ -1344,7 +1350,7 @@ div#privacy-policy div.content p {
 }
 .pre-sale-phase .col-8,
 .token-phase-1 .col-8 {
-  padding-left: 55px;
+  padding-left: 10px;
 }
 .pre-sale-phase hr,
 .token-phase-1 hr,
@@ -1400,7 +1406,16 @@ div#privacy-policy div.content p {
   font-size: 12px;
 }
 .current-sale {
-  margin-top: 35px;
+	background:#45474c;
+}
+.PriceBox {
+    background: #4c4e53;
+    margin: 10px;
+    padding: 10px;
+    min-height: 96px;
+}
+.PriceBox p {
+    color: #d69361!important;
 }
 .current-sale .title {
   color: #E9E9EA;
@@ -3360,6 +3375,11 @@ textarea#abi-inerface:focus{
     color: white;
     text-align: center;
     margin-bottom: 20px;
+	    margin-left: 10px;
+    margin-right: 10px;
+	
+	    width: 100%;
+    margin-top: 30px;
 }
 @media screen and (max-width: 767px){
   .traffic-message{
