--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,13 @@ img {
   background-size: cover;
   background-attachment: fixed;
 }
+.introduction-banner.au {
+	background: url("../images/BG-AU.jpg") no-repeat;
+	  background-position: center center;
+  height:100%;
+  background-size: cover;
+  background-attachment: fixed;
+}
 @media screen and (min-width: 768px) and (max-height: 730px){
   .introduction-banner .cta-group{
     margin-top: 15px;
@@ -314,6 +321,8 @@ img {
   transition: all 0.2s linear;
   padding: 40px 0;
 }
+
+
 .header .logo {
   float: left;
 }
@@ -366,6 +375,13 @@ img {
 }
 .middle-content .main-logo-wrapper{
   margin: auto;
+      margin-top: 183px;
+}
+
+.Straya{
+	    -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Safari */
+    transform: rotate(180deg);
 }
 
 .middle-content .main-logo-wrapper img {
@@ -1896,6 +1912,14 @@ div#privacy-policy div.content p {
     color: white;
     margin-top: 14px;
 }
+.flagBits {
+    position: absolute;
+    left: 20px;
+    font-size: 33px;
+    color: white;
+    margin-top: 14px;
+}
+
 .faq-main .header .navigation {
   top: 80px;
 }
