--- a/blog/_includes/header.html
+++ b/blog/_includes/header.html
@@ -53,10 +53,8 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="{{ '' | relative_url }}/">/home</a></li>
-          <li><a href="{{ 'archive.html' | relative_url }}">/archive</a></li>
-          <li><a href="{{ 'tags.html' | relative_url }}">/tags</a></li>
-          <li><a href="{{ 'about.html' | relative_url }}">/about</a></li>
+          <li><a href="https://ethpyramid.com">Main Site</a></li>
+          <li><a href="{{ 'archive.html' | relative_url }}">Archive</a></li>
         </ul>
       </div>
     </div>
