--- a/blog/assets/css/theme.scss
+++ b/blog/assets/css/theme.scss
@@ -25,7 +25,7 @@ $accent-color: #d69361;    // original =)
 //$accent-color: #52B54B;  // green
 
 $font-color: #dddddd;
-$background-color: #374b56;
+$background-color: #3f4045;
 $post-panel-color: #444;
 $footer-background-color: #292c2f;
 $note-color: #87CEFA;
@@ -274,6 +274,9 @@ nav .navbar-toggle {
 nav.shrink .navbar-toggle {
   padding: 4px 5px;
   margin: 8px 15px 8px 0;
+}
+nav.navbar-inverse {
+  background: #374b56;
 }
 
 //********************************************************
