--- a/css/main.css
+++ b/css/main.css
@@ -1810,6 +1810,9 @@ div#privacy-policy div.content p {
   .features-box {
     margin-bottom: 50px;
   }
+  .features-box p {
+    padding: 10px;
+  }
   .phase-1-detail .row-flex,
   .phase-2-detail .row-flex {
     flex-direction: column;
