--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,14 @@ img {
   background-size: cover;
   background-attachment: fixed;
 }
+
+.introduction-banner.cn {
+	background: url("../images/BG-CN.jpg") no-repeat;
+	  background-position: center center;
+  height:100%;
+  background-size: cover;
+  background-attachment: fixed;
+}
 @media screen and (min-width: 768px) and (max-height: 730px){
   .introduction-banner .cta-group{
     margin-top: 15px;
