--- a/css/main.css
+++ b/css/main.css
@@ -294,23 +294,33 @@ img {
   vertical-align: middle;
 }
 .introduction-banner {
+  background: url("../images/BG.jpg") no-repeat;
   background-position: center center;
   height:100%;
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat;
 }
-.introduction-banner {
-  background-image: url("../images/BG.jpg");
+.introduction-banner.au {
+	background: url("../images/BG-AU.jpg") no-repeat;
+	  background-position: center center;
+  height:100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
-.lang_au .introduction-banner {
-  background-image: url("../images/BG-AU.jpg");
+.introduction-banner.de {
+	background: url("../images/BG-DE.jpg") no-repeat;
+	  background-position: center center;
+  height:100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
-.lang_de .introduction-banner {
-  background-image: url("../images/BG-DE.jpg");
-}
-.lang_cn .introduction-banner {
-  background-image: url("../images/BG-CN.jpg");
+
+.introduction-banner.cn {
+	background: url("../images/BG-CN.jpg") no-repeat;
+	  background-position: center center;
+  height:100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 @media screen and (min-width: 768px) and (max-height: 730px){
   .introduction-banner .cta-group{
@@ -385,8 +395,8 @@ img {
       margin-top: 10px;
 }
 
-.lang_au .buy-eos img, .lang_au .sticky-header, .lang_au .main-logo-wrapper  {
-	-ms-transform: rotate(180deg); /* IE 9 */
+.Straya{
+	    -ms-transform: rotate(180deg); /* IE 9 */
     -webkit-transform: rotate(180deg); /* Safari */
     transform: rotate(180deg);
 }
@@ -1944,9 +1954,6 @@ div#privacy-policy div.content p {
 .faq-main .introduction-banner {
   background-image: none;
   height: auto;
-}
-.faq-main .middle-content {
-  display: none;
 }
 .faq-main .header, .no-background .header {
   background: rgba(59, 81, 93, 0.89);
@@ -5442,6 +5449,4 @@ _:-ms-fullscreen, :root .modal .modal-body .token-check-condition input[type='ch
   }
 }
 
-.whitepaper h2, .whitepaper h3, .whitepaper h4, .whitepaper p {
-  margin: 30px 0;
-}
+
